--- a/src/app/root/main/main.component.css
+++ b/src/app/root/main/main.component.css
@@ -1,5 +1,7 @@
 .main {
-  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
 }
 
 .head {
@@ -12,6 +14,7 @@
 
 .outlet {
   z-index: 1;
+  height: 100%;
 }
 
 .footer {
@@ -19,8 +22,11 @@
 }
 
 .menu-container {
+  flex: 1;
+}
+
+.menu-sidenav {
   overflow: auto;
-  height: 100%;
 }
 
 :host ::ng-deep .menu-container > div:first-child::-webkit-scrollbar {
