add http service and fix ...

--- a/src/app/root/footer/footer.component.html
+++ b/src/app/root/footer/footer.component.html
@@ -1,3 +1,5 @@
 <div class="footer">
-  <span [innerText]="(progressFlg |async)?(progressMsg|async):defalutMsg"></span>
+  <span [innerText]="defalutMsg"></span>
+  &nbsp;&nbsp;&nbsp;
+  <span *ngIf="progressFlg |async" [innerText]="progressMsg|async"></span>
 </div>
