--- a/src/app/root/main/main.component.html
+++ b/src/app/root/main/main.component.html
@@ -5,7 +5,7 @@
     (langSelectEvent)="changeLang($event)"
     (menuButtonClickEvent)="toggleMenu()"
   ></app-head>
-  <mat-sidenav-container class="menu-container">
+  <mat-sidenav-container class="menu-container" [autosize]="false">
     <mat-sidenav
       [mode]="isLargeFlg ? 'side' : 'over'"
       [opened]="menuOpenStatus"
