--- a/src/app/features/character/component/character/character.component.html
+++ b/src/app/features/character/component/character/character.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="data">
     <mat-card class="card">
         <mat-card-header>
-            <div mat-card-avatar class="avatar" [style.background-image]="'url(' + avatarURL + ')'"></div>
+            <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''"></div>
             <mat-card-title>{{data.fullname}}</mat-card-title>
             <mat-card-subtitle>{{data.element}}</mat-card-subtitle>
         </mat-card-header>
