--- a/src/app/features/character/component/character/character.component.html
+++ b/src/app/features/character/component/character/character.component.html
@@ -5,17 +5,20 @@
             <mat-card-title>{{data.fullname}}</mat-card-title>
             <mat-card-subtitle>{{data.element}}</mat-card-subtitle>
         </mat-card-header>
-        <mat-card-content>
-            <mat-expansion-panel class="mat-elevation-z0">
+        <mat-card-content class="content">
+            <mat-divider></mat-divider>
+            <mat-expansion-panel class="mat-elevation-z0 expand">
                 <mat-expansion-panel-header>
                     <mat-panel-title>
-                        This is the expansion title
+                        <span [innerText]="'CHARACTER.props' | translate"></span>
                     </mat-panel-title>
                     <mat-panel-description>
-                        This is a summary of the content
+                        
                     </mat-panel-description>
                 </mat-expansion-panel-header>
+
                 <p>This is the primary content of the panel.</p>
+
             </mat-expansion-panel>
         </mat-card-content>
         <mat-card-actions>
