--- a/src/app/features/character/component/character/character.component.css
+++ b/src/app/features/character/component/character/character.component.css
@@ -16,3 +16,21 @@
 .expand {
     margin-top: 1px;
 }
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table tr:first-child {
+    border-top: 1px solid rgba(0,0,0,.12);
+    border-bottom: 1px solid rgba(0,0,0,.12);
+}
+
+table tr {
+    border-bottom: 1px solid rgba(0,0,0,.12);
+}
+
+.content-right {
+    text-align: right;
+}
