--- a/src/app/root/head/head.component.html
+++ b/src/app/root/head/head.component.html
@@ -20,4 +20,7 @@
       </button>
     </ng-container>
   </mat-menu>
+  <a mat-icon-button [href]="githubRepository" target="_blank">
+    <img class="github" src="assets/icons/github.png">
+  </a>
 </mat-toolbar>
