--- a/src/app/features/character/component/character/character.component.html
+++ b/src/app/features/character/component/character/character.component.html
@@ -4,7 +4,8 @@
             <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
             </div>
             <mat-card-title>{{data.fullname}}</mat-card-title>
-            <mat-card-subtitle>{{data.weapontype}} &nbsp; <{{data.element}}></mat-card-subtitle>
+            <mat-card-subtitle>{{data.weapontype}} &nbsp; <{{data.element}}>
+            </mat-card-subtitle>
         </mat-card-header>
         <mat-card-content class="content">
             <mat-divider></mat-divider>
@@ -18,7 +19,7 @@
                     </mat-panel-description>
                 </mat-expansion-panel-header>
                 <!-- レベル選択 -->
-                <mat-form-field appearance="legacy" color="" floatLabel="always">
+                <mat-form-field appearance="legacy" floatLabel="always">
                     <mat-label [innerText]="'PROPS.LEVEL' | translate"></mat-label>
                     <mat-select [(ngModel)]="selectedLevel" (ngModelChange)="onChangeLevel($event)">
                         <ng-container *ngFor="let option of levelOptions">
@@ -31,21 +32,21 @@
                 <!-- 属性情報 -->
                 <table>
                     <tr *ngFor="let prop of props">
-                        <td [innerText]="'PROPS.' + prop | translate"></td>
-                        <td class="content-right" [innerText]="selectedLevelProps[prop] | number: '1.0-0' | noComma"></td>
+                        <td class="content-left" [innerText]="'PROPS.' + prop | translate"></td>
+                        <td class="content-right"
+                            [innerText]="selectedLevelProps[prop].isPercent?(selectedLevelProps[prop].value | percent: '1.0-1' | noComma):(selectedLevelProps[prop].value | number: '1.0-0' | noComma)"
+                            [matTooltip]="selectedLevelProps[prop].value" matTooltipPosition="right"></td>
                     </tr>
                     <ng-container *ngFor="let prop of props_sub">
                         <tr *ngIf="selectedLevelProps[prop]">
-                            <td [innerText]="'PROPS.' + prop | translate"></td>
-                            <td class="content-right" [innerText]="selectedLevelProps[prop] | number: '1.2-2' | noComma"></td>
+                            <td class="content-left" [innerText]="'PROPS.' + prop | translate"></td>
+                            <td class="content-right"
+                                [innerText]="selectedLevelProps[prop].isPercent?(selectedLevelProps[prop].value | percent: '1.0-1' | noComma):(selectedLevelProps[prop].value | number: '1.0-0' | noComma)"
+                                [matTooltip]="selectedLevelProps[prop].value" matTooltipPosition="right"></td>
                         </tr>
                     </ng-container>
                 </table>
             </mat-expansion-panel>
         </mat-card-content>
-        <!-- <mat-card-actions>
-            <button mat-button>LIKE</button>
-            <button mat-button>SHARE</button>
-        </mat-card-actions> -->
     </mat-card>
 </ng-container>
