--- a/src/app/features/character/component/weapon/weapon.component.html
+++ b/src/app/features/character/component/weapon/weapon.component.html
@@ -1,1 +1,74 @@
-<p>weapon works!</p>
+<ng-container>
+    <mat-card class="card">
+        <mat-card-header>
+            <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
+            </div>
+            <mat-card-title class="header-text">
+                <mat-form-field appearance="legacy" floatLabel="always">
+                    <mat-label [innerText]="'WEAPON.NAME' | translate"></mat-label>
+                    <mat-select [(ngModel)]="selectedWeaponKey" (ngModelChange)="onSelectWeapon($event)">
+                        <ng-container *ngFor="let weapon of weaponList">
+                            <mat-option 
+                                *ngIf="weapon.weaponType == charWeaponType" 
+                                [value]="weapon.queryName"
+                                [innerText]="weapon.name"></mat-option>
+                        </ng-container>
+                    </mat-select>
+                </mat-form-field>
+            </mat-card-title>
+            <!-- <mat-form-field appearance="legacy" floatLabel="always">
+                <mat-label [innerText]="'PROPS.LEVEL' | translate"></mat-label>
+                <mat-select [(ngModel)]="currentWeaponType" (ngModelChange)="onSelectWeaponType($event)">
+                    <ng-container *ngFor="let option of levelOptions">
+                        <mat-option [value]="option"
+                            [innerText]="(option.level | number: '1.0-0') + (option.isAscend?('PROPS.ASCENDED' | translate):'')">
+                        </mat-option>
+                    </ng-container>
+                </mat-select>
+            </mat-form-field> -->
+        </mat-card-header>
+        <mat-card-content class="content">
+            <mat-divider></mat-divider>
+            <mat-expansion-panel class="mat-elevation-z0 expand" [expanded]="true">
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        <span [innerText]="'WEAPON.PROPS' | translate"></span>
+                    </mat-panel-title>
+                    <mat-panel-description>
+
+                    </mat-panel-description>
+                </mat-expansion-panel-header>
+                <!-- レベル選択 -->
+                <mat-form-field appearance="legacy" floatLabel="always">
+                    <mat-label [innerText]="'PROPS.LEVEL' | translate"></mat-label>
+                    <mat-select [(ngModel)]="selectedLevel" (ngModelChange)="onChangeLevel($event)">
+                        <ng-container *ngFor="let option of levelOptions">
+                            <mat-option
+                                *ngIf="(option.level < selectedWeaponAbleMaxLevel) || (option.level == selectedWeaponAbleMaxLevel && !option.isAscend )"
+                                [value]="option"
+                                [innerText]="(option.level | number: '1.0-0') + (option.isAscend?('PROPS.ASCENDED' | translate):'')">
+                            </mat-option>
+                        </ng-container>
+                    </mat-select>
+                </mat-form-field>
+                <!-- 属性情報 -->
+                <table>
+                    <tr *ngFor="let prop of props">
+                        <td class="content-left" [innerText]="'PROPS.' + prop | translate"></td>
+                        <td class="content-right"
+                            [innerText]="selectedLevelProps[prop].isPercent?(selectedLevelProps[prop].value | percent: '1.0-1' | noComma):(selectedLevelProps[prop].value | number: '1.0-0' | noComma)"
+                            [matTooltip]="selectedLevelProps[prop].value" matTooltipPosition="right"></td>
+                    </tr>
+                    <ng-container *ngFor="let prop of props_sub">
+                        <tr *ngIf="selectedLevelProps[prop]">
+                            <td class="content-left" [innerText]="'PROPS.' + prop | translate"></td>
+                            <td class="content-right"
+                                [innerText]="selectedLevelProps[prop].isPercent?(selectedLevelProps[prop].value | percent: '1.0-1' | noComma):(selectedLevelProps[prop].value | number: '1.0-0' | noComma)"
+                                [matTooltip]="selectedLevelProps[prop].value" matTooltipPosition="right"></td>
+                        </tr>
+                    </ng-container>
+                </table>
+            </mat-expansion-panel>
+        </mat-card-content>
+    </mat-card>
+</ng-container>
