--- a/src/app/features/character/component/main/main.component.html
+++ b/src/app/features/character/component/main/main.component.html
@@ -1,8 +1,9 @@
 <div class="main">
     <div [@imgLoad]="backgroundLoadFlg?'loaded':'beforeLoad'" class="background" *ngIf="backgroundURL" [style.background-image]="'url(' + backgroundURL + ')'"></div>
-    <!-- <img [src]="backgroundURL"> -->
     <div class="content" fxLayout="row wrap">
-        <app-character [data]="data" [dataForCal]="dataForCal"></app-character>
+        <app-character [data]="data" [dataForCal]="dataForCal" fxFlexOffset="10px"></app-character>
         <app-weapon [charWeaponType]="data.weapontype" fxFlexOffset="10px"></app-weapon>
+        <app-talent [data]="data" [dataForCal]="dataForCal" fxFlexOffset="10px"></app-talent>
+        <app-constellation [data]="data" [dataForCal]="dataForCal" fxFlexOffset="10px"></app-constellation>
     </div>
 </div>
