--- a/src/app/features/character/component/character/character.component.css
+++ b/src/app/features/character/component/character/character.component.css
@@ -1,6 +1,7 @@
 .card {
     max-width: 350px;
     min-width: 350px;
+    margin: 10px;
 }
 
 .avatar {
@@ -44,4 +45,14 @@ table tr:first-child .content-right {
 .content-right-button {
     text-align: center;
     border-bottom: none;
+}
+
+.drap-handle {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #ccc;
+    cursor: move;
+    width: 24px;
+    height: 24px;
 }
