--- a/src/app/features/character/component/weapon/weapon.component.css
+++ b/src/app/features/character/component/weapon/weapon.component.css
@@ -1,6 +1,7 @@
 .card {
     max-width: 350px;
     min-width: 350px;
+    margin: 10px;
 }
 
 .avatar {
@@ -29,24 +30,34 @@ table {
 }
 
 table tr:first-child .content-left {
-    border-top: 1px solid rgba(0,0,0,.12);
+    border-top: 1px solid rgba(0, 0, 0, .12);
 }
 
 table tr:first-child .content-right {
-    border-top: 1px solid rgba(0,0,0,.12);
+    border-top: 1px solid rgba(0, 0, 0, .12);
 }
 
 .content-left {
     text-align: left;
-    border-bottom: 1px solid rgba(0,0,0,.12);
+    border-bottom: 1px solid rgba(0, 0, 0, .12);
 }
 
 .content-right {
     text-align: right;
-    border-bottom: 1px solid rgba(0,0,0,.12);
+    border-bottom: 1px solid rgba(0, 0, 0, .12);
 }
 
 .content-right-button {
     text-align: center;
     border-bottom: none;
+}
+
+.drap-handle {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #ccc;
+    cursor: move;
+    width: 24px;
+    height: 24px;
 }
