--- a/src/app/root/head/head.component.html
+++ b/src/app/root/head/head.component.html
@@ -9,7 +9,7 @@
   </button>
   <span class="menu-title" [innerHTML]="'HOME.TITLE' | translate"></span>
   <span class="spacer"></span>
-  <app-capture-html></app-capture-html>
+  <!-- <app-capture-html></app-capture-html> -->
   <button mat-icon-button [matMenuTriggerFor]="langSelect">
     <mat-icon>language</mat-icon>
   </button>
