--- a/src/app/features/character/component/main/main.component.html
+++ b/src/app/features/character/component/main/main.component.html
@@ -1,9 +1,10 @@
 <div class="main">
     <div [@imgLoad]="backgroundLoadFlg?'loaded':'beforeLoad'" class="background" *ngIf="backgroundURL" [style.background-image]="'url(' + backgroundURL + ')'"></div>
-    <div class="content" fxLayout="row wrap">
+    <div class="content" fxLayout="row wrap" [@otherLoad]="otherState">
         <app-character class="float" [data]="data" [dataForCal]="dataForCal"></app-character>
-        <app-weapon  class="float" [charWeaponType]="data.weapontype"></app-weapon>
-        <app-talent  class="float" [data]="data" [dataForCal]="dataForCal"></app-talent>
-        <app-constellation  class="float" [data]="data" [dataForCal]="dataForCal"></app-constellation>
+        <app-weapon class="float" [charWeaponType]="data.weapontype"></app-weapon>
+        <app-talent class="float" [data]="data" [dataForCal]="dataForCal"></app-talent>
+        <app-constellation class="float" [data]="data" [dataForCal]="dataForCal"></app-constellation>
+        <app-enemy class="float"></app-enemy>
     </div>
 </div>
