--- a/src/app/features/character/component/talent/talent.component.html
+++ b/src/app/features/character/component/talent/talent.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="data.skills">
+<ng-container *ngIf="data.skills.normal.name">
     <mat-card class="card" cdkDrag>
         <div class="drap-handle" cdkDragHandle>
             <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
