--- a/src/app/features/character/component/enemy/enemy.component.html
+++ b/src/app/features/character/component/enemy/enemy.component.html
@@ -9,8 +9,8 @@
             </svg>
         </div>
         <mat-card-header>
-            <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
-            </div>
+            <!-- <div mat-card-avatar class="avatar" [style.background-image]="avatarLoadFlg?'url(' + avatarURL + ')':''">
+            </div> -->
             <mat-card-title class="header-text">
                 <mat-form-field appearance="legacy" floatLabel="always">
                     <mat-label [innerText]="'ENEMY.NAME' | translate"></mat-label>
