--- a/src/app/features/character/component/main/main.component.html
+++ b/src/app/features/character/component/main/main.component.html
@@ -4,7 +4,7 @@
         <div>
             <app-character [data]="data" [language]="currentLanguage"></app-character>
             <div class="middle"></div>
-            <app-enemy [language]="currentLanguage"></app-enemy>
+            <app-enemy [data]="data" [language]="currentLanguage"></app-enemy>
         </div>
         <div>
             <app-weapon [data]="data" [language]="currentLanguage"></app-weapon>
