--- a/src/app/features/character/component/constellation/constellation.component.html
+++ b/src/app/features/character/component/constellation/constellation.component.html
@@ -21,7 +21,7 @@
                             </mat-panel-title>
                         </mat-expansion-panel-header>
                         <!-- 効果情報 -->
-                        <span [innerHTML]="talent.desc[currentLanguage] | noStrong"></span>
+                        <span [innerHTML]="talent.desc[currentLanguage]"></span>
                     </mat-expansion-panel>
                 </ng-container>
             </mat-accordion>
