--- a/src/app/shared/component/extra-data/extra-data.component.html
+++ b/src/app/shared/component/extra-data/extra-data.component.html
@@ -1,1 +1,10 @@
-<p>extra-data works!</p>
+<table>
+    <tr>
+        <td>
+            dmg
+        </td>
+        <td>
+            AAAA
+        </td>
+    </tr>
+</table>
