--- a/src/app/shared/component/extra-data/extra-data.component.html
+++ b/src/app/shared/component/extra-data/extra-data.component.html
@@ -1,10 +1,13 @@
 <table>
     <tr>
         <td>
-            dmg
+            
         </td>
         <td>
-            AAAA
+            <ng-container *ngFor="let info of getInfos()">
+                <span [innerText]="info.originDmg"></span>
+                <br>
+            </ng-container>
         </td>
     </tr>
 </table>
