--- a/src/app/features/character/component/extra-info/extra-info.component.css
+++ b/src/app/features/character/component/extra-info/extra-info.component.css
@@ -3,26 +3,30 @@ table {
     border-collapse: collapse;
 }
 
-table tr:first-child td {
+table tr:nth-of-type(1) td {
     border-top: 1px solid rgba(0,0,0,.12);
 }
 
-tr:nth-of-type(odd) td:nth-of-type(1) {
+tr:nth-of-type(3n+2) td:nth-of-type(1) {
     text-align: left;
     /* border-bottom: 1px solid rgba(0,0,0,.12); */
 }
 
-tr:nth-of-type(odd) td:nth-of-type(2) {
+tr:nth-of-type(3n+2) td:nth-of-type(2) {
     text-align: right;
     /* border-bottom: 1px solid rgba(0,0,0,.12); */
 }
 
-tr:nth-of-type(even) td:nth-of-type(1) {
+tr:nth-of-type(3n+3) td:nth-of-type(1) {
     text-align: left;
     border-bottom: 1px solid rgba(0,0,0,.12);
 }
 
-tr:nth-of-type(even) td:nth-of-type(2) {
+tr:nth-of-type(3n+3) td:nth-of-type(2) {
     text-align: right;
     border-bottom: 1px solid rgba(0,0,0,.12);
+}
+
+.placeholder {
+    height: 2px;
 }
